[package]
name = "nwfs"
version = "0.1.0"
authors = ["Rink Springer <rink@rink.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.5"
byteorder = "1"
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
